fix: I fixed the degree rotation of the prev icon and the scrollbar

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -733,8 +733,8 @@ section {
   width: auto;
   height: auto;
   padding: 10px;
+  margin-top: -40px;
   border-radius: 5px;
-
 }
 .portfolio-popup .pp-main{
   min-height: 100vh;
@@ -744,11 +744,14 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow-y: auto;
+  max-height: calc(100vh - 120px); /* Calculate the maximum height */ /* You can disable this */
 }
 .portfolio-popup .pp-main-inner{
   background-color: var(--color-grey-5); //You can delete this
   padding: 70px 0 50px;
   position: relative;
+  overflow-y: auto; /* Add this line */
 }
 .portfolio-popup .pp-project-details-btn{
   position: relative;
@@ -824,7 +827,6 @@ section {
 .portfolio-popup .pp-close:hover {
   color: var(--color-pink); /* Change color to pink on hover */
 }
-
 .portfolio-popup .pp-close:after {
   border-radius: 50%;
 }
@@ -841,6 +843,29 @@ section {
   bottom: 5px;
   font-size: 16px;
   color:var(--color-white);
+}
+.portfolio-popup .pp-prev,
+.portfolio-popup .pp-next{
+  position: fixed;
+  top: 350px;
+  height: 40px;
+  width: 40px;
+  background-color: red;
+  text-align: center;
+  font-size: 20px;
+}
+.portfolio-popup .pp-prev i,
+.portfolio-popup .pp-next i{
+  line-height: 40px;
+}
+.portfolio-popup .pp-prev i{
+  transform: rotate(180deg);
+}
+.portfolio-popup .pp-prev{
+  left: 15px;
+}
+.portfolio-popup .pp-next{
+  right: 15px;
 }
 /* End of Portfolio Popup */
 /* End of Portfolio Section */
